# Unixsig

./: setup.cfg
.github/workflows/: ci.yml  release.yml
