# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = unixsig
description = Python Package to Handle Unix Signals.
author = Clivern
author_email = hello@clivern.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/clivern/unixsig/
project_urls =
    Documentation = https://github.com/clivern/unixsig/
    Source = https://github.com/clivern/unixsig/
    Changelog = https://github.com/Clivern/unixsig/blob/main/CHANGELOG.rst
    Tracker = https://github.com/Clivern/unixsig/issues
    Download = https://pypi.org/project/unixsig/#files

platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    License :: OSI Approved :: MIT License


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.6

# Dependencies of the project
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests
    cache
    examples

[options.extras_require]
# Test requirements
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov unixsig --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = unixsig
